use bootstrap text-truncate to prevent wrapping

--- a/content/global.css
+++ b/content/global.css
@@ -1,9 +1,3 @@
-header h1,footer div {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
 main {
   min-height: calc(100vh - 4.8rem);
 }
